# serial-x

./: README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  log4rs.yaml  tauri.conf.json
src-tauri/schemas/: avr-scheme-2xs.scheme  avr-temperature-and-voltage.scheme  avr-test-0.scheme  cat-tracker.scheme  moja kuca.scheme  power-tracker-1.scheme  water-pump.scheme  xcxxccxc.scheme  yyyyyy.scheme
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: log.rs  mod.rs  port.rs  scheme.rs  settings.rs  time.rs
src/components/layout/: index.tsx
src/components/layout/dashboard/: index.tsx
src/components/layout/status-bar/: index.tsx
src/components/layout/theme-switch/: index.tsx
src/components/layout/top-menu/: index.tsx
src/components/shared/: index.tsx
src/components/shared/connecting/: index.tsx
src/components/views/: home.tsx  index.ts  settings.tsx
src/components/views/port/: index.tsx
src/components/views/port/port-info/: index.tsx
src/components/views/port/port-list/: serial-port-list-item.tsx  serial-port-list.tsx
src/components/views/scheme/: data-type-select.tsx  index.tsx  schema-builder.tsx  schema-list.tsx  schema-viewer.tsx  variable-name-input.tsx
src/context/: serial-port.tsx  settings.tsx
src/interface/: index.tsx
src/styles/: box.css  button.css  flex.css  font.css  index.css  layout.css  logo.css  modifiers.css  overwrite.css  port.css  reset.css  schema.css  sidebar.css  themes.css  top-menu.css  util.css
src/util/: index.tsx
