[package]
name = "serial-x"
version = "0.1.0"
description = "Serial port app"
authors = ["josiphaboic@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "serial_x_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.137"
jsonrpc_v2_client = "0.2.1"
rs-uuid = "0.4.0"
serde_derive = "1.0.217"
serialport = "4.7.0"
prost = "0.13.4"
prost-types = "0.13.4"
tokio = { version = "1.43", features = ["full"] }
tokio-macros = "2.4.0"
log4rs = "1.3.0"
log = "0.4.25"
chrono = "0.4.39"
tauri-utils = "2.1.1"
parking_lot = "0.12.3"
